Fix z-index mistake

--- a/css/style.css
+++ b/css/style.css
@@ -441,6 +441,7 @@ body {
   -webkit-transition: opacity .3s ease-in;
   -ms-transition: opacity .3s ease-in;
   transition: opacity .3s ease-in;
+  z-index: -1;
 }
 
 .modal.show {
@@ -501,7 +502,7 @@ body {
   background-color: inherit;
   padding: 0;
   border-radius: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .side-section {
